tests/error/python error/sketch.py
from p5 import *


def setup():
  createCanvas(400, 400)
  x

def draw():
  background('black')
  fill('hotpink')
  circle(frameCount, 200, 50)
  y
